<resources>
    <string name="app_name">StocksKhaata</string>
    <string name="add_text">Add</string>
    <string name="filter_text">Filter</string>
    <string name="home_title">Home</string>
    <string name="stock_list_text">Stocks List</string>
    <string name="save_text">Save</string>
    <string name="stock_name_text">Stock name</string>
    <string name="quantity_text">Quantity</string>
    <string name="buy_price_text">Buying price</string>
    <string name="selling_price_text">Selling price</string>
    <string name="rupees_symbol">\u20b9</string>
    <string name="add_stock_dialog">Add stock dialog</string>
    <string name="trend_up_symbol">\u2b06</string>
    <string name="trend_down_symbol">\u2b07</string>
    <string name="expand_view_cd">expand view</string>
    <string name="expand_text">Expand</string>
    <string name="quantity_placeholder">Quantity</string>
    <string name="p_and_l_text"><![CDATA[P&L]]> </string>
    <string name="buy_price_header">Buy price</string>
    <string name="sell_price_text">Sell price</string>
    <string name="total_investment">Total investment</string>
    <string name="collapse">Collapse</string>
    <string name="no_stock_has_been_added_yet">No stock has been added yet.</string>
    <string name="market">Market</string>
    <string name="short_trade">Short trade</string>
    <string name="short_sell">Short sell</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="favorite_button">favorite_button</string>
    <string name="confirmation_dialog">Confirmation Dialog</string>
    <string name="total_trades">Total trades</string>
    <string name="net_growth">Net growth</string>
    <string name="back_button">Back button</string>
    <string name="search_by_name">Search by Name</string>
    <string name="nse">NSE</string>
    <string name="bse">BSE</string>
    <string name="filter_market">Market</string>
    <string name="select_method">Sort by</string>
    <string name="stock_price">Stock price</string>
    <string name="clear_filters">Clear filters</string>
    <string name="apply_filters">Apply filters</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="growth_percentage">Growth percentage</string>
    <string name="filter_dialog">Filter Dialog</string>
    <string name="sort_by">Sort by</string>
    <string name="stock_price_high_to_low">Stock price: High to low</string>
    <string name="stock_price_low_to_high">Stock price: Low to high</string>
    <string name="investment_high_to_low">Investment: High to low</string>
    <string name="investment_low_to_high">Investment: Low to high</string>
    <string name="growth_high_to_low">Growth: High to low</string>
    <string name="growth_low_to_high">Growth: Low to high</string>
    <string name="name_z_a">Name: (Z-A)</string>
    <string name="name_a_z">Name: (A-Z)</string>
    <string name="filter_stocks">Filter stocks</string>
    <string name="close_button">Close button</string>
    <string name="add_a_stock">Add a stock</string>
    <string name="growth_percent_high_to_low">Growth %: (High to Low)</string>
    <string name="growth_percent_low_to_high">Growth %: Low to High</string>
    <string name="p_amp_l"><![CDATA[P&L %]]></string>
    <string-array name="markets">
        <item>National Stock Exchange (NSE)</item>
        <item>Bombay Stock Exchange (BSE)</item>
    </string-array>
</resources>