<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/filter_stocks"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/close_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?selectableItemBackground"
        android:padding="8dp"
        android:contentDescription="@string/close_button"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_title" />

    <TextView
        android:id="@+id/market_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_button" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/market_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/market_header">

        <com.google.android.material.chip.Chip
            android:id="@+id/nse_filter"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nse"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/chip_background"
            app:chipStrokeColor="@color/chip_stroke"
            app:chipStrokeWidth="2dp"
            app:textEndPadding="16dp"
            app:textStartPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bse_filter"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bse"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/chip_background"
            app:chipStrokeColor="@color/chip_stroke"
            app:chipStrokeWidth="2dp"
            app:textEndPadding="16dp"
            app:textStartPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/favorites_filter"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/chip_background"
            app:chipStrokeColor="@color/chip_stroke"
            app:chipStrokeWidth="2dp"
            app:textEndPadding="16dp"
            app:textStartPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/short_sell_filter"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_sell"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@color/chip_background"
            app:chipStrokeColor="@color/chip_stroke"
            app:chipStrokeWidth="2dp"
            app:textEndPadding="16dp"
            app:textStartPadding="16dp" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/select_sort_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/market_chip_group"/>

    <HorizontalScrollView
        android:id="@+id/sort_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_sort_header">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/select_sort_header"
            app:selectionRequired="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/name_filter_asc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_a_z"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipStrokeColor="@color/chip_stroke"
                app:chipStrokeWidth="2dp"
                app:textEndPadding="16dp"
                app:textStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/name_filter_dsc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_z_a"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipStrokeColor="@color/chip_stroke"
                app:chipStrokeWidth="2dp"
                app:textEndPadding="16dp"
                app:textStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/growth_asc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/growth_low_to_high"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipStrokeColor="@color/chip_stroke"
                app:chipStrokeWidth="2dp"
                app:textEndPadding="16dp"
                app:textStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/growth_dsc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/growth_high_to_low"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipStrokeColor="@color/chip_stroke"
                app:chipStrokeWidth="2dp"
                app:textEndPadding="16dp"
                app:textStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/investment_asc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/investment_low_to_high"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipStrokeColor="@color/chip_stroke"
                app:chipStrokeWidth="2dp"
                app:textEndPadding="16dp"
                app:textStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/investment_dsc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/investment_high_to_low"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipStrokeColor="@color/chip_stroke"
                app:chipStrokeWidth="2dp"
                app:textEndPadding="16dp"
                app:textStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/stock_price_asc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_price_low_to_high"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipStrokeColor="@color/chip_stroke"
                app:chipStrokeWidth="2dp"
                app:textEndPadding="16dp"
                app:textStartPadding="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/stock_price_dsc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_price_high_to_low"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipStrokeColor="@color/chip_stroke"
                app:chipStrokeWidth="2dp"
                app:textEndPadding="16dp"
                app:textStartPadding="16dp" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/stock_price_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/stock_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/sort_chip_group"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/stock_price_range_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:stepSize="500.0"
        android:valueFrom="0.0"
        android:valueTo="100000.0"
        app:labelBehavior="floating"
        app:labelStyle="@style/Widget.MaterialComponents.Tooltip"
        app:layout_constraintTop_toBottomOf="@id/stock_price_header"
        app:thumbRadius="8dp"
        app:tickVisible="false"
        app:values="@array/buy_price" />

    <TextView
        android:id="@+id/growth_percentage_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/growth_percentage"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/stock_price_range_slider" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/growth_percentage_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:stepSize="2.5"
        android:valueFrom="-50.0"
        android:valueTo="100.0"
        app:labelBehavior="floating"
        app:labelStyle="@style/Widget.MaterialComponents.Tooltip"
        app:layout_constraintTop_toBottomOf="@id/growth_percentage_header"
        app:thumbRadius="8dp"
        app:tickVisible="false"
        app:values="@array/growth_percent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/primaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/button_container" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/growth_percentage_slider">

        <TextView
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/clear_filters"
            android:textAllCaps="true"
            android:textColor="@color/primaryColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/apply_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/apply_filters"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>