<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:contentInsetStart="0dp"
                android:elevation="8dp"
                android:layout_height="?actionBarSize"
                app:layout_constraintTop_toTopOf="parent"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stats_hud"
            android:layout_width="match_parent"
            android:elevation="6dp"
            android:layout_height="wrap_content"
            android:background="@color/trend_up_green_light"
            app:layout_constraintTop_toBottomOf="@id/toolbar">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>
            <TextView
                android:id="@+id/trades_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/total_trades"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trades_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/trades_header"
                app:layout_constraintStart_toStartOf="@+id/trades_header"
                app:layout_constraintTop_toBottomOf="@+id/trades_header"
                tools:text="1564"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress_bar_trades"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                android:indeterminateTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/trades_text"
                app:layout_constraintEnd_toEndOf="@+id/trades_header"
                app:layout_constraintStart_toStartOf="@+id/trades_header"
                app:layout_constraintTop_toTopOf="@id/trades_text" />

            <TextView
                android:id="@+id/net_growth_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/net_growth"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/net_growth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/net_growth_header"
                app:layout_constraintStart_toStartOf="@+id/net_growth_header"
                app:layout_constraintTop_toBottomOf="@id/net_growth_header"
                tools:text="\u20b9 1564"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress_bar_growth"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                android:indeterminateTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/net_growth_text"
                app:layout_constraintEnd_toEndOf="@+id/net_growth_header"
                app:layout_constraintStart_toStartOf="@+id/net_growth_header"
                app:layout_constraintTop_toTopOf="@id/net_growth_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/empty_textView"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_stock_has_been_added_yet"
            android:textColor="@color/primaryLightColor"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_hud" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/add_text"
        android:src="@drawable/ic_add"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>